--- a/wineshare/src/main/resources/templates/fragments/header.html
+++ b/wineshare/src/main/resources/templates/fragments/header.html
@@ -47,9 +47,9 @@
               <li class="active">
                 <a href="about.html" title="">Marketing</a>
                 <ul class="sub-menu">
-                  <li><a href="About.html" title="">Wine Bar</a></li>
-                  <li><a href="Event.html" title="">Bottle Shop</a></li>
-                  <li><a href="Coming-soon.html" title="">Bistro</a></li>
+                  <li><a th:href="@{marketings/winebar/list}" title="">Wine Bar</a></li>
+                  <li><a th:href="@{marketings/bottleshop/list}" title="">Bottle Shop</a></li>
+                  <li><a th:href="@{marketings/bistro/list}" title="">Bistro</a></li>
                   <!--                                    <li><a href="404-page.html" title="">Promotion</a></li>-->
                   <!--                                    <li><a href="Wish-list.html" title="">Wish List</a></li>-->
                 </ul><!-- /.sub-menu -->
