--- a/wineshare/src/main/resources/static/wineshare-css/wine-list.css
+++ b/wineshare/src/main/resources/static/wineshare-css/wine-list.css
@@ -5,18 +5,18 @@
 }
 
 .widget.widget-filter{
-    width:750px;
+    width:70%;
     padding: 15px;
     margin: 30px auto;
     height: 150px;
-    border: 1px solid grey;
+    border: 1px solid #e5e5e5;
     position:relative;
 }
 .widget.widget-filter h2{
     position:absolute;
     padding: 0 15px;
     top:20px;
-    left:300px;
+    left:43%;
     font-size: 24px;
 }
 
@@ -149,13 +149,15 @@
 
 .widget-filter p.amount {
     position: absolute;
-    left: 320px;
+    left: 45%;
     margin-top: 30px;
 }
 
-.sort-filter{
-    float:right;
-    width:8%;
+.filter-shop .sort-filter{
+    position: absolute;
+    top:-50px;
+    right: 4%;
+    width:13%;
     text-align:center;
 
 }
