--- a/wineshare/src/main/resources/templates/board/boardForm.html
+++ b/wineshare/src/main/resources/templates/board/boardForm.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf.layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/layout1}">
 
 <th:block layout:fragment="css">
   <!-- write css Fiels -->
@@ -31,17 +32,17 @@
   </div>
 
   <div class="board_write_wrap">
-    <form th:action="@{/write}" method="post" class="board_write">
+<!--    <form th:action="@{/}" method="post" class="board_write">-->
       <div class="title">
         <dl>
           <dt>제목</dt>
-          <dd><input type="text" name="title" placeholder="제목입력" th:value="${post.title}" required></dd>
+          <dd><input type="text" name="title" placeholder="제목입력" value="" required></dd>
         </dl>
       </div>
       <div class="info">
         <dl>
           <dt>글쓴이</dt>
-          <dd><input type="text" name="writer" placeholder="글쓴이 입력" th:value="${post.writer}" required></dd>
+          <dd><input type="text" name="writer" placeholder="글쓴이 입력" value="" required></dd>
         </dl>
         <dl>
           <dt>비밀번호</dt>
@@ -50,14 +51,14 @@
       </div>
 
       <div class="cont">
-        <textarea name="content" placeholder="내용입력해주세요" th:text="${post.content}" required></textarea>
+        <textarea name="content" placeholder="내용입력해주세요" text="" required></textarea>
       </div>
 
       <div class="bt_wrap">
         <button type="submit" class="on">등록</button>
-        <a th:href="@{/}" class="bt_cancel">취소</a>
+        <a href="#" class="bt_cancel">취소</a>
       </div>
-    </form>
+<!--    </form>-->
   </div>
 
 </div>
