--- a/wineshare/src/main/resources/templates/layouts/layout1.html
+++ b/wineshare/src/main/resources/templates/layouts/layout1.html
@@ -9,6 +9,12 @@
     <meta name="author" content="themesflat.com">
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+    <!--  csrf 추가  -->
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+
+
     <title>WINESHARE</title>
     <!-- Bootstrap  -->
     <link rel="stylesheet" type="text/css" th:href="@{/stylesheets/bootstrap.css}">
@@ -31,6 +37,7 @@
     <link th:href="@{/icon/icon.png}" rel="shortcut icon">
 
     <script type="text/javascript" th:src="@{/javascript/jquery.min.js}"></script>
+
 
 
     <!-- 사용자 css, js 자리 -->
