--- a/wineshare/src/main/resources/templates/member/memberForm.html
+++ b/wineshare/src/main/resources/templates/member/memberForm.html
@@ -6,6 +6,11 @@
 <!-- register css Fiels -->
 <th:block layout:fragment="css">
 <link rel="stylesheet" type="text/css" th:href="@{/stylesheets/register.css}">
+    <style>
+        .fieldError{
+            color: #bd2130;
+        }
+    </style>
 </th:block>
 
 <!--<div id="loading-overlay">-->
@@ -14,7 +19,13 @@
 
 <th:block layout:fragment="script">
     <script th:inline="javascript">
-
+        $(document).ready(function(){
+            const errorMessage = [[${errorMessage}]];
+            console.log("errorMessage ===> " + errorMessage);
+            if(errorMessage != null){
+                alert(errorMessage);
+            }
+        });
     </script>
 </th:block>
 
@@ -26,54 +37,72 @@
     <div id="container1"></div>
 
     <div class="container">
-        <h1 class="header">Create Account</h1>
+
+        <div th:if="${authority.equals('admin')}">
+        <h1 class="header">Create Admin Account</h1>
+        </div>
+
+        <div th:unless="${authority.equals('admin')}">
+            <h1 class="header">Create Account</h1>
+        </div>
+
+
 
         <!-- 타임리프를 사용한 회원가입 폼 -->
-        <form th:action="@{/templates/register}" method="post" class="login-form">
+        <form action="/members/new" role="form" method="post" class="login-form"
+            th:object="${memberDTO}">
 
             <!-- 이메일 입력 -->
             <div class="form-group">
                 <label th:for="email">Email</label>
-                <input id="email" name="email" type="email" placeholder="email" required/>
+                <input th:field="*{email}" type="email" placeholder="email" required/>
+                <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
             </div>
 
             <!-- 비밀번호 입력 -->
             <div class="form-group">
                 <label th:for="password">Password</label>
-                <input id="password" name="password" type="password" placeholder="password" required/>
+                <input th:field="*{password}" type="password" placeholder="password" required/>
+                <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
             </div>
 
             <!-- 이름 입력 -->
             <div class="form-group">
                 <label th:for="name">Name</label>
-                <input id="name" name="name" type="text" placeholder="Enter your name" required/>
+                <input th:field="*{name}" type="text" placeholder="Enter your name" required/>
+                <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
             </div>
 
             <!-- 닉네임 입력 -->
             <div class="form-group">
-                <label for="nickname">Nickname</label>
-                <input id="nickname" name="nickname" type="text" placeholder="Enter your nickname" required/>
+                <label th:for="nickname">Nickname</label>
+                <input th:field="*{nickname}" type="text" placeholder="Enter your nickname" required/>
+                <p th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}" class="fieldError">Incorrect data</p>
             </div>
 
             <!-- 주민등록번호 입력 -->
             <div class="form-group">
-                <label for="rrn">RRN</label>
-                <input id="rrn" name="rrn" type="text" placeholder="Enter your RRN" required/>
+                <label th:for="RRN">RRN</label>
+                <input th:field="*{RRN}" type="text" placeholder="Enter your RRN" required/>
+                <p th:if="${#fields.hasErrors('RRN')}" th:errors="*{RRN}" class="fieldError">Incorrect data</p>
             </div>
 
             <!-- 전화번호 입력 -->
             <div class="form-group">
-                <label for="mobile">Phone Number</label>
-                <input id="mobile" name="mobile" type="text" placeholder="Enter your phone number" required/>
+                <label th:for="phoneNumber">Phone Number</label>
+                <input th:field="*{phoneNumber}" type="text" placeholder="Enter your phone number" required/>
+                <p th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}" class="fieldError">Incorrect data</p>
             </div>
 
             <!-- 등록 버튼 -->
             <button type="submit" class="login-button">Register</button>
+
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
         </form>
 
         <div class="footer-text">
             <!-- 로그인 페이지로 이동 -->
-            Already have an account? <a th:href="@{/templates/login}">Sign In</a>
+            Already have an account? <a th:href="@{/members/login}">Sign In</a>
         </div>
     </div>
 
