--- a/wineshare/src/main/resources/templates/board/boardForm.html
+++ b/wineshare/src/main/resources/templates/board/boardForm.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf.layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/layout1}">
 
 <th:block layout:fragment="css">
-  <!-- write css Fiels -->
-  <link rel="stylesheet" type="text/css" th:href="@{/stylesheets/write.css}">
+  <style>
+    .fieldError{
+        color: #bd2130;
+    }
+  </style>
+  <link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/board-form.css}">
 </th:block>
 
 <th:block layout:fragment="script">
@@ -20,49 +25,75 @@
 <!--</div> &lt;!&ndash; /.loading-overlay &ndash;&gt; 로딩페이지-->
 
 <div layout:fragment="content">
-<div class="main-homepage-1">
+  <div class="board-form">
+    <form role="form" method="post" th:object="${boardDTO}">
+      <input type="hidden" th:field="*{id}">
 
-</div> <!-- /homepage1 -->
-<div class="board_wrap">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="panel panel-default">
+            <div class="form-title">Board Register</div>
 
-  <div class="board_title">
-    <strong>자유게시판</strong>
-    <p>자유롭게 의견을 나눠보세요!!</p>
-  </div>
+            <div class="form-body">
+              <div class="row">
+                <div class="col-lg-12">
 
-  <div class="board_write_wrap">
-    <form th:action="@{/write}" method="post" class="board_write">
-      <div class="title">
-        <dl>
-          <dt>제목</dt>
-          <dd><input type="text" name="title" placeholder="제목입력" th:value="${post.title}" required></dd>
-        </dl>
+                  <div class="form-group">
+                    <label th:for="boardTitle">제목</label>
+                    <input type="text" class="form-control" th:field="*{boardTitle}" placeholder="제목을 입력해주세요.">
+                    <p th:if="${#fields.hasErrors('boardTitle')}" th:errors="*{boardTitle}" class="fieldError">Incorrect data</p>
+                  </div>
+
+                  <div class="form-group">
+                    <label th:for="boardContent">내용</label>
+                    <textarea  th:field="*{boardContent}" cols="95%" rows="5" class="form-control"></textarea>
+                    <p th:if="${#fields.hasErrors('boardContent')}" th:errors="*{boardContent}" class="fieldError">Incorrect data</p>
+                  </div>
+
+                  <div th:if="${#strings.isEmpty(boardDTO.id)}">
+                    <div class="form-group">
+                      <label th:for="writerNickname">작성자</label>
+                      <input type="text" class="form-control" th:field="*{writerNickname}" placeholder="작성자를 입력해주세요.">
+                      <p class="fieldError" th:if="${#fields.hasErrors('writerNickname')}" th:errors="*{writerNickname}">Incorrect data</p>
+                    </div>
+                  </div>
+
+                  <div th:unless="${#strings.isEmpty(boardDTO.id)}">
+                    <div class="form-group">
+                      <label th:for="writerNickname">작성자</label>
+                      <input type="text" class="form-control" th:field="*{writerNickname}" placeholder="작성자를 입력해주세요." readonly>
+                      <p class="fieldError" th:if="${#fields.hasErrors('writerNickname')}" th:errors="*{writerNickname}">Incorrect data</p>
+                    </div>
+                  </div>
+
+                  <div th:if="${#strings.isEmpty(boardDTO.id)}">
+                    <div class="reg-button">
+                      <!--    th:formaction 경로 수정해야합니덥!!!     -->
+                      <button th:formaction="@{/board/new}"
+                              type="submit" class="btn text-white" style="background-color: #c02323;">등록</button>
+                      <button type="reset" class="btn text-white" style="background-color: #BDBDBD;">취소</button>
+                    </div>
+                  </div>
+
+                  <div th:unless="${#strings.isEmpty(boardDTO.id)}">
+                    <!--    th:formaction 경로 수정해야합니덥!!!     -->
+                    <button th:formaction="@{'/board/modify/' + ${BoardDTO.id}}" class="btn text-white" style="background-color: #c02323;" type="submit">수정</button>
+                    <button th:formaction="@{'/board/remove/' + ${BoardDTO.id}}" class="btn text-white" style="background-color: #E1B848;" type="submit">삭제</button>
+                    <button type="reset" class="btn text-white" style="background-color: #BDBDBD;">취소</button>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
       </div>
-      <div class="info">
-        <dl>
-          <dt>글쓴이</dt>
-          <dd><input type="text" name="writer" placeholder="글쓴이 입력" th:value="${post.writer}" required></dd>
-        </dl>
-        <dl>
-          <dt>비밀번호</dt>
-          <dd><input type="password" name="password" placeholder="비밀번호 입력" required></dd>
-        </dl>
-      </div>
 
-      <div class="cont">
-        <textarea name="content" placeholder="내용입력해주세요" th:text="${post.content}" required></textarea>
-      </div>
-
-      <div class="bt_wrap">
-        <button type="submit" class="on">등록</button>
-        <a th:href="@{/}" class="bt_cancel">취소</a>
-      </div>
     </form>
   </div>
 
-</div>
 
-<a id="scroll-top"><i class="fa fa-angle-right" aria-hidden="true"></i></a> <!-- /#scroll-top -->
 </div>
 
 </html>
