--- a/wineshare/src/main/resources/templates/board/boardList.html
+++ b/wineshare/src/main/resources/templates/board/boardList.html
@@ -5,7 +5,7 @@
 
 <th:block layout:fragment="css">
     <!-- board css Fiels -->
-    <link rel="stylesheet" type="text/css" th:href="@{/stylesheets/board.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/board-list.css}">
 </th:block>
 
 <th:block layout:fragment="script">
@@ -17,63 +17,62 @@
 
 
 <div layout:fragment="content">
-<div class="main-homepage-1">
+    <div class="main-homepage-1">
 
-</div> <!-- /homepage1 -->
-<div class="board_wrap">
+    </div> <!-- /homepage1 -->
+    <div class="board_wrap">
 
-    <div class="board_title">
-        <strong>질문 게시판</strong>
-        <p>자유롭게 의견을 나눠보세요!!</p>
-    </div>
+        <div class="board_title">
+            <strong>질문 게시판</strong>
+        </div>
 
-    <div class="board_list_wrap">
-        <div class="board_list">
-            <div class="top">
-                <div class="num">번호</div>
-                <div class="title">제목</div>
-                <div class="writer">글쓴이</div>
-                <div class="date">작성일</div>
-                <div class="count">조회</div>
+        <div class="board_list_wrap">
+            <div class="board_list">
+                <div class="top">
+                    <div class="num">번호</div>
+                    <div class="title">제목</div>
+                    <div class="writer">글쓴이</div>
+                    <div class="date">작성일</div>
+                    <div class="count">조회</div>
+                </div>
+
+                <!-- 게시글 목록 출력 -->
+                <div th:each="board, status: ${boards.getContent()}">
+                    <div class="num" th:text="${board.id}"></div>
+                    <div class="title"><a th:href="'/' + ${board.boardStatus} + '/get/' + ${board.id}" th:text="${board.boardTitle}"></a></div>
+                    <div class="writer" th:text="${board.regBy}"></div>
+                    <div class="date" th:text="${#temporals.format(board.regTime.toLocalDate(), 'yy-MM-dd')}"></div>
+    <!--                <div class="count" th:text=""></div>-->
+                </div>
             </div>
 
-            <!-- 게시글 목록 출력 -->
-            <div th:each="board, status: ${boards.getContent()}">
-                <div class="num" th:text="${board.id}"></div>
-                <div class="title"><a th:href="'/' + ${board.boardStatus} + '/get/' + ${board.id}" th:text="${board.boardTitle}"></a></div>
-                <div class="writer" th:text="${board.regBy}"></div>
-                <div class="date" th:text="${#temporals.format(board.regTime.toLocalDate(), 'yy-MM-dd')}"></div>
-<!--                <div class="count" th:text=""></div>-->
+            <!-- 페이지 네비게이션 -->
+            <div class="board_page">
+                <a href="#" class="bt first"><<</a>
+                <a href="#" class="bt prev"><</a>
+                <a href="#" class="num on">1</a>
+                <a href="#" class="num">2</a>
+                <a href="#" class="num">3</a>
+                <a href="#" class="num">4</a>
+                <a href="#" class="num">5</a>
+                <a href="#" class="bt next">></a>
+                <a href="#" class="bt last">>></a>
+            </div>
+
+            <!-- 버튼 영역 -->
+            <div class="bt_wrap">
+                <a th:href="@{/write}" class="on">등록</a>
+                <a th:href="@{/}">메인 홈페이지로 돌아가기</a>
             </div>
         </div>
 
-        <!-- 페이지 네비게이션 -->
-        <div class="board_page">
-            <a href="#" class="bt first"><<</a>
-            <a href="#" class="bt prev"><</a>
-            <a href="#" class="num on">1</a>
-            <a href="#" class="num">2</a>
-            <a href="#" class="num">3</a>
-            <a href="#" class="num">4</a>
-            <a href="#" class="num">5</a>
-            <a href="#" class="bt next">></a>
-            <a href="#" class="bt last">>></a>
-        </div>
-
-        <!-- 버튼 영역 -->
-        <div class="bt_wrap">
-            <a th:href="@{/write}" class="on">등록</a>
-            <a th:href="@{/}">메인 홈페이지로 돌아가기</a>
-        </div>
     </div>
-
-</div>
 
 
 </div>
 
 <a id="scroll-top"><i class="fa fa-angle-right" aria-hidden="true"></i></a> <!-- /#scroll-top -->
-</div>
+
 
 
 </html>
