--- a/wineshare/src/main/resources/templates/wine/wineForm.html
+++ b/wineshare/src/main/resources/templates/wine/wineForm.html
@@ -5,7 +5,57 @@
 
 <div layout:fragment="content">
 
+    <div class="container">
+        <h1 class="header">Wine Register Form</h1>
 
+        <!-- 타임리프를 사용한 회원가입 폼 -->
+        <form th:action="@{/templates/register}" method="post" class="login-form">
+
+            <!-- 이메일 입력 -->
+            <div class="form-group">
+                <label th:for="email">Email</label>
+                <input id="email" name="email" type="email" placeholder="email" required/>
+            </div>
+
+            <!-- 비밀번호 입력 -->
+            <div class="form-group">
+                <label th:for="password">Password</label>
+                <input id="password" name="password" type="password" placeholder="password" required/>
+            </div>
+
+            <!-- 이름 입력 -->
+            <div class="form-group">
+                <label th:for="name">Name</label>
+                <input id="name" name="name" type="text" placeholder="Enter your name" required/>
+            </div>
+
+            <!-- 닉네임 입력 -->
+            <div class="form-group">
+                <label for="nickname">Nickname</label>
+                <input id="nickname" name="nickname" type="text" placeholder="Enter your nickname" required/>
+            </div>
+
+            <!-- 주민등록번호 입력 -->
+            <div class="form-group">
+                <label for="rrn">RRN</label>
+                <input id="rrn" name="rrn" type="text" placeholder="Enter your RRN" required/>
+            </div>
+
+            <!-- 전화번호 입력 -->
+            <div class="form-group">
+                <label for="mobile">Phone Number</label>
+                <input id="mobile" name="mobile" type="text" placeholder="Enter your phone number" required/>
+            </div>
+
+            <!-- 등록 버튼 -->
+            <button type="submit" class="login-button">Register</button>
+        </form>
+
+        <div class="footer-text">
+            <!-- 로그인 페이지로 이동 -->
+            Already have an account? <a th:href="@{/templates/login}">Sign In</a>
+        </div>
+    </div>
 
 </div>
 </html>
