--- a/wineshare/src/main/resources/templates/wine/wineForm.html
+++ b/wineshare/src/main/resources/templates/wine/wineForm.html
@@ -3,58 +3,133 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 
+<!-- 사용자 css -->
+<th:block layout:fragment="css">
+    <link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/wine-form.css}">
+
+</th:block>
+
+<!--/* 사용자 js 추가 */-->
+<th:block layout:fragment="script">
+    <script th:inline="javascript">
+        $(document).ready(function(){
+
+          const errorMessage = [[${errorMessage}]];
+          if (errorMessage != null) {
+            alert(errorMessage);
+          }
+
+          bindDomEvent();
+
+        });
+
+        // 이미지 파일만 등록 가능하도록 해주기
+        function bindDomEvent() {
+          $(".custom-file-input").on("change", function() {
+            const fileName = $(this).val().split("\\").pop();
+            // 체인지가 일어난곳(this)의 밸류(들어간 파일의 경로)
+            // 경로를 스플릿하면 경로의 마지막이 제일 위로 쌓이고, 팝하면 그걸 꺼내옴 = 파일명
+            let fileExt = fileName.substring(fileName.lastIndexOf(".")+1); // 확장자 추출
+            fileExt = fileExt.toLowerCase(); // 확장자를 소문자로 변환
+
+            if (fileExt != "jpg" && fileExt != "jpeg" && fileExt != "gif" && fileExt != "png" && fileExt != "bmp") {
+              alert("이미지 파일만 등록이 가능합니다.");
+              return;
+            }
+
+            $(this).siblings(".custom-file-label").html(fileName);
+            // 파일 이름 띄워주기 (this=custom-file-input 의 형제 중 custom-file-label 에 fileName을 html로 넣어줌)
+
+          });
+        }
+    </script>
+</th:block>
+
+
 <div layout:fragment="content">
 
-    <div class="container">
-        <h1 class="header">Wine Register Form</h1>
+    <div class="wine-form">
+        <h1 class="wine-form-title">Wine Register Form</h1>
 
-        <!-- 타임리프를 사용한 회원가입 폼 -->
-        <form th:action="@{/templates/register}" method="post" class="login-form">
+        <!-- 타임리프를 사용한 와인 등록 폼 -->
+        <form th:action="@{/templates/wine}" method="post" class="wineForm" th:object="${wineDTO}" enctype="multipart/form-data">
 
-            <!-- 이메일 입력 -->
+            <!-- 와인 이름 입력 -->
             <div class="form-group">
-                <label th:for="email">Email</label>
-                <input id="email" name="email" type="email" placeholder="email" required/>
+                <label th:for="wineName">Wine Name</label>
+                <input th:field="*{wineName}" type="text" placeholder="와인 이름을 입력해주세요." required/>
             </div>
 
-            <!-- 비밀번호 입력 -->
+            <!-- 생산 국가 입력 -->
             <div class="form-group">
-                <label th:for="password">Password</label>
-                <input id="password" name="password" type="password" placeholder="password" required/>
+                <label th:for="country">Wine Country</label>
+                <input th:field="*{country}" type="text" placeholder="생산 국가를 입력해주세요." required/>
             </div>
 
-            <!-- 이름 입력 -->
+            <!-- 생산 지역 입력 -->
             <div class="form-group">
-                <label th:for="name">Name</label>
-                <input id="name" name="name" type="text" placeholder="Enter your name" required/>
+                <label th:for="region">Wine Region</label>
+                <input th:field="*{region}" type="text" placeholder="생산 지역을 입력해주세요." required/>
             </div>
 
-            <!-- 닉네임 입력 -->
+            <!-- 와인 가격 입력 -->
             <div class="form-group">
-                <label for="nickname">Nickname</label>
-                <input id="nickname" name="nickname" type="text" placeholder="Enter your nickname" required/>
+                <label th:for="price">Price (₩)</label>
+                <input th:field="*{price}" type="text" placeholder="와인 가격을 입력해주세요." required/>
             </div>
 
-            <!-- 주민등록번호 입력 -->
+            <!-- 와인 종류 선택 -->
             <div class="form-group">
-                <label for="rrn">RRN</label>
-                <input id="rrn" name="rrn" type="text" placeholder="Enter your RRN" required/>
+                <label th:for="wineType">Wine Type</label>
+                <select th:field="*{wineType}" >
+                    <option value="RED">RED</option>
+                    <option value="WHITE">WHITE</option>
+                    <option value="SPARKLING">SPARKLING</option>
+                    <option value="ROSE">ROSE</option>
+                    <option value="DESSERT">DESSERT</option>
+                    <option value="PORT">PORT</option>
+                </select>
             </div>
 
-            <!-- 전화번호 입력 -->
+            <!-- 이미지 첨부 -->
             <div class="form-group">
-                <label for="mobile">Phone Number</label>
-                <input id="mobile" name="mobile" type="text" placeholder="Enter your phone number" required/>
+                <label th:for="wineImg">Wine Image</label>
+                <div th:if="${#strings.isEmpty(wineDTO.wineImg)}">
+                    <div class="form-img">
+                        <div class="custom-file img-div">
+                            <input type="file" class="custom-file-input" name="wineImgFile">
+                            <label class="custom-file-label" th:text="와인이미지"></label>
+                        </div>
+                    </div>
+                </div>
+
+                <div th:if="${not #strings.isEmpty(wineDTO.wineImg)}">
+                    <div class="form-img">
+                        <div class="custom-file img-div">
+                            <input type="file" class="custom-file-input" name="wineImgFile">
+                            <input type="hidden" name="id" th:value="${wineDTO.id}">
+                            <label class="custom-file-label"
+                                   th:text="와인 이미지를 동록해주세요."></label>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- 등록 버튼 -->
-            <button type="submit" class="login-button">Register</button>
+            <div th:if="${#strings.isEmpty(wineDTO.id)}">
+                <div class="wine-reg-button">
+                    <!--    th:formaction 경로 수정해야합니덥!!!     -->
+                    <button th:formaction="@{/board/new}"
+                            type="submit" class="btn text-white" style="background-color: #c02323;">등록</button>
+                    <button type="reset" class="btn text-white" style="background-color: #BDBDBD;">취소</button>
+                </div>
+            </div>
+
+
+
         </form>
 
-        <div class="footer-text">
-            <!-- 로그인 페이지로 이동 -->
-            Already have an account? <a th:href="@{/templates/login}">Sign In</a>
-        </div>
+
     </div>
 
 </div>
