--- a/wineshare/src/main/resources/static/wineshare-css/wine-detail.css
+++ b/wineshare/src/main/resources/static/wineshare-css/wine-detail.css
@@ -82,6 +82,7 @@ td:nth-child(even) {
     padding: 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     width: 200px; /* 카드의 너비 */
+    text-align: center;
 }
 
 .food {
@@ -92,6 +93,7 @@ td:nth-child(even) {
     padding: 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     width: 200px; /* 카드의 너비 */
+    text-align: center;
 }
 
 .aroma{
