--- a/wineshare/src/main/resources/templates/wine/wineDetail.html
+++ b/wineshare/src/main/resources/templates/wine/wineDetail.html
@@ -18,13 +18,17 @@
       left: 50%;
       transform: translateX(-50%);
     }
+    .similar_img {
+      height: 250px;
+      width: auto;
+    }
     .progress-bar {
       position:relative;
       width: 10%;
       transform: translateX(-10%);
     }
     .review_box {
-      margin: 10px auto;
+      margin: 20px auto;
     }
   </style>
 </th:block>
@@ -59,7 +63,10 @@
         <div class="row">
           <div class="col-lg-6 col-md-6">
             <div class="image-wrap">
-              <img th:src="${wine.wineImg == 'https://images.vivino.com/highlights/icon/most_user_rated.svg' || wine.wineImg == 'https://thumbs.vivino.com/avatars/ZlapMkM9QayY3ci79lSL7A_50x50.jpg' ? '/image/wineDefault.png' : wine.wineImg}" alt="image"
+              <img th:src="${wine.wineImg == 'https://images.vivino.com/highlights/icon/most_user_rated.svg' ||
+              wine.wineImg == 'https://thumbs.vivino.com/avatars/ZlapMkM9QayY3ci79lSL7A_50x50.jpg' ||
+              wine.wineImg == 'https://images.vivino.com/highlights/icon/top_ranked.svg'
+              ? '/image/wineDefault.png' : wine.wineImg}" alt="image"
                    th:class="wine_img"
                    onerror="this.onerror=null; this.src='/image/wineDefault.png'; this.className='wine_img'">
 
@@ -67,16 +74,40 @@
           </div>
           <div class="col-lg-6 col-md-6">
             <div class="content-wrap">
-              <h2 class="heading" th:text="${wine.wineName}"></h2>
-              <div class="post-rating">
-                <i class="fa fa-star active" aria-hidden="true"></i>
-                <span th:text="${#numbers.formatDecimal(wineDevelopCount.ExpertRating, 1, 1)}"></span>
+              <h1 class="heading" th:text="${wine.wineName}"></h1>
 
-              </div>
-              <h2 class="dolar" th:text="${wine.price == null || wine.price == 0 ? '가격정보없음' : #numbers.formatCurrency(wine.price)}">$19.99</h2>
+              <h3 class="dolar" th:text="${wine.price == null || wine.price == 0 ? '가격정보없음' : #numbers.formatCurrency(wine.price)}">$19.99</h3>
 
               <div class="info-content">
                 <ul>
+                  <li>
+                    <span class="note">
+                      <span th:with="end=${wineDevelopCount.expertRating != null || wineDevelopCount.expertRating != 0 ? T(java.lang.Math).round(wineDevelopCount.expertRating) : 0}">
+                        <span th:each="i : ${#numbers.sequence(1, end)}" th:if="${end > 0}">
+                          <i class="fa fa-star active" aria-hidden="true"></i> <!-- 채워진 별 -->
+                        </span>
+                        <span th:each="i : ${#numbers.sequence(end + 1, 5)}" th:if="${end < 5}">
+                          <i class="fa fa-star" aria-hidden="true"></i> <!-- 빈 별 -->
+                        </span>
+                        <span th:text="${#numbers.formatDecimal(wineDevelopCount.ExpertRating, 1, 1)}"></span>
+                      </span>
+                      (전문가)
+                    </span>
+                  </li>
+                  <li>
+                    <span class="note">
+                      <span th:with="end=${wineReviewRating.regularRating != null || wineReviewRating.regularRating != 0 ? T(java.lang.Math).round(wineReviewRating.regularRating) : 0}">
+                        <span th:each="i : ${#numbers.sequence(1, end)}" th:if="${end > 0}">
+                          <i class="fa fa-star active" aria-hidden="true"></i> <!-- 채워진 별 -->
+                        </span>
+                        <span th:each="i : ${#numbers.sequence(end + 1, 5)}" th:if="${end < 5}">
+                          <i class="fa fa-star" aria-hidden="true"></i> <!-- 빈 별 -->
+                        </span>
+                        <span th:text="${#numbers.formatDecimal(wineReviewRating.regularRating, 1, 1)}"></span>
+                      </span>
+                      (소비자)
+                    </span>
+                  </li>
                   <li>
                     <span class="note">
                       Type:
@@ -198,24 +229,24 @@
       <div class="aroma-container">
         <h2>Aroma Wheel</h2>
         <div class="card">
-          <img class="aroma" src="https://cdn-icons-png.flaticon.com/128/1791/1791364.png" alt="aroma">
-          <p th:text="${wineDevelopCount.aromaOne}">이곳은 카드 1의 내용입니다.</p>
+          <img class="aroma" th:src="${aromaOne.aromaImg}" alt="aroma">
+          <p th:text="${aromaOne.aromaValue}">이곳은 카드 1의 내용입니다.</p>
         </div>
         <div class="card">
-          <img class="aroma" src="https://cdn-icons-png.flaticon.com/128/1791/1791354.png" alt="aroma">
-          <p th:text="${wineDevelopCount.aromaTwo}">이곳은 카드 2의 내용입니다.</p>
+          <img class="aroma" th:src="${aromaTwo.aromaImg}" alt="aroma">
+          <p th:text="${aromaTwo.aromaValue}">이곳은 카드 2의 내용입니다.</p>
         </div>
       </div>
 
       <div class="food-container">
         <h2>Food Pairing</h2>
         <div class="food">
-          <img class="pairing" src="https://cdn-icons-png.flaticon.com/128/1046/1046769.png" alt="pairing">
-          <p th:text="${wineDevelopCount.foodOne}">이곳은 카드 1의 내용입니다.</p>
+          <img class="pairing" th:src="${foodOne.foodImg}" alt="pairing">
+          <p th:text="${foodOne.food}">이곳은 카드 1의 내용입니다.</p>
         </div>
         <div class="food">
-          <img class="pairing" src="https://cdn-icons-png.flaticon.com/128/819/819827.png" alt="pairing">
-          <p th:text="${wineDevelopCount.foodTwo}">이곳은 카드 2의 내용입니다.</p>
+          <img class="pairing" th:src="${foodTwo.foodImg}" alt="pairing">
+          <p th:text="${foodTwo.food}">이곳은 카드 2의 내용입니다.</p>
         </div>
       </div>
     </div>
@@ -232,106 +263,34 @@
         <div class="row">
           <div class="col-lg-10" style="margin: 0 auto;">
             <div class="title-section">
-              <h1 class="our-product-main"><a href="#">Similar Wine</a></h1>
+              <h1 class="our-product-main">Similar Wine</h1>
               <div class="our-product-image">
-                <img src="/main/image/homepage14.png" alt="image">
+                <img th:src="@{/image/homepage14.png}" alt="image">
               </div>
             </div> <!-- /title-section -->
             <div class="product-content product-fourcolumn clearfix">
               <ul class="product style2 isotope-product clearfix">
-                <li class="product-item features arrivals">
+                <li class="product-item features arrivals" th:each="similarWine, status : ${similarWineList}">
                   <div class="product-thumb clearfix">
-                    <a href="#" class="product-thumb">
-                      <img src="/main/image/homepage55.png" alt="image">
+                    <a th:href="@{'/wines/wine/' + ${similarWine.id}}" class="product-thumb">
+                      <img th:src="${similarWine.wineImg == 'https://images.vivino.com/highlights/icon/most_user_rated.svg' ||
+                                                    similarWine.wineImg == 'https://thumbs.vivino.com/avatars/ZlapMkM9QayY3ci79lSL7A_50x50.jpg' ||
+                                                    similarWine.wineImg == 'https://images.vivino.com/highlights/icon/top_ranked.svg'
+                                                    ? '/image/wineDefault.png' : similarWine.wineImg}" alt="image"
+                           th:class="similar_img"
+                           onerror="this.onerror=null; this.src='/image/wineDefault.png';">
                     </a>
                   </div>
                   <div class="product-info text-center clearfix">
-                    <span class="product-title">Laboure Chardonnay</span>
-                    <div class="price">
-                      <ins>
-                        <span class="amount">$19.99</span>
-                      </ins>
-                    </div>
-
+                    <span class="product-title" th:text="${similarWine.wineName}">와인이름</span>
                   </div>
                   <div class="product-review">
-
                     <div class="add-cart">
                       <a href="#" class="like2"><i class="fa fa-heart-o"></i></a>
                     </div>
-
                   </div>
                 </li> <!-- /product-item -->
-                <li class="product-item features sale">
-                  <div class="product-thumb clearfix">
-                    <a href="#" class="product-thumb">
-                      <img src="/main/image/homepage150.png" alt="image">
-                    </a>
-                  </div>
-                  <div class="product-info clearfix">
-                    <span class="product-title">Josh Cellars Cabarnet</span>
-                    <div class="price">
-                      <ins>
-                        <span class="amount">$29.99</span>
-                        <del>$38.99</del>
-                      </ins>
-                    </div>
 
-                  </div>
-                  <div class="product-review">
-
-                    <div class="add-cart">
-                      <a href="#" class="like2"><i class="fa fa-heart-o"></i></a>
-                    </div>
-
-                  </div>
-                </li> <!-- /product-item -->
-                <li class="product-item features">
-                  <div class="product-thumb clearfix">
-                    <a href="#" class="product-thumb">
-                      <img src="/main/image/homepage57.png" alt="image">
-                    </a>
-
-                  </div>
-                  <div class="product-info clearfix">
-                    <span class="product-title">Dark Horse Rosé</span>
-                    <div class="price">
-                      <ins>
-                        <span class="amount">$38.49</span>
-                      </ins>
-                    </div>
-                  </div>
-                  <div class="product-review">
-
-                    <div class="add-cart">
-                      <a href="#" class="like2"><i class="fa fa-heart-o"></i></a>
-                    </div>
-
-                  </div>
-                </li> <!-- /product-item -->
-                <li class="product-item arrivals">
-                  <div class="product-thumb clearfix">
-                    <a href="#" class="product-thumb">
-                      <img src="/main/image/homepage150.png" alt="image">
-                    </a>
-                  </div>
-                  <div class="product-info clearfix">
-                    <span class="product-title">Dark Hose Rosé</span>
-                    <div class="price">
-                      <ins>
-                        <span class="amount">$38.49</span>
-                      </ins>
-                    </div>
-
-                  </div>
-                  <div class="product-review">
-
-                    <div class="add-cart">
-                      <a href="#" class="like2"><i class="fa fa-heart-o"></i></a>
-                    </div>
-
-                  </div>
-                </li> <!-- /product-item -->
               </ul>
             </div>
           </div> <!-- /col-lg-12 -->
@@ -354,20 +313,23 @@
                 <div class="post-bottom-second post-bottom" >
                   <div class="review_box" th:each="develop, status : ${wineDevelopList}">
                     <div class="avatar">
-                      <img th:src="${wine.wineImg == 'https://images.vivino.com/highlights/icon/most_user_rated.svg' || wine.wineImg == 'https://thumbs.vivino.com/avatars/ZlapMkM9QayY3ci79lSL7A_50x50.jpg' ? '/image/wineDefault.png' : wine.wineImg}" alt="image"
-                           th:class="profile_img"
-                           onerror="this.onerror=null; this.src='/image/wineDefault.png'; this.className='profile_img'">
+                      <img th:src="@{/wineshare-img/people.png}" alt="image"
+                           th:class="profile_img">
 
                     </div>
 
                     <div class="post-comment">
                       <div class="post-rating">
-                        <i class="fa fa-star" aria-hidden="true"></i> <!-- 넘버시퀀스로.. 별점준만큼 th:each -->
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <span th:with="end=${develop.expertRating != null ? T(java.lang.Math).round(develop.expertRating) : 0}">
+                            <span th:each="i : ${#numbers.sequence(1, end)}">
+                                <i class="fa fa-star active" aria-hidden="true"></i> <!-- 채워진 별 -->
+                            </span>
+                            <span th:each="i : ${#numbers.sequence(end + 1, 5)}" th:if="${end <= 4}">
+                                <i class="fa fa-star" aria-hidden="true"></i> <!-- 빈 별 -->
+                            </span>
+                        </span>
                       </div>
+
                       <div class="comment-title comment" th:text="${develop.memberId}"></div> <!-- 멤버아이디로 멤버이름 불러오는 메소드 js로 만들거나 에초에 멤버아이디 말고 멤버 받도록 하거나 -->
                       <div class="comment-text comment" th:text="${develop.expertComment}">
 
@@ -584,9 +546,8 @@
                 <div id="reviews" class="woocommerce-Reviews">
                   <div class="post-bottom-second post-bottom">
                     <div class="avatar">
-                      <img th:src="${wine.wineImg == 'https://images.vivino.com/highlights/icon/most_user_rated.svg' || wine.wineImg == 'https://thumbs.vivino.com/avatars/ZlapMkM9QayY3ci79lSL7A_50x50.jpg' ? '/image/wineDefault.png' : wine.wineImg}" alt="image"
-                           th:class="profile_img"
-                           onerror="this.onerror=null; this.src='/image/wineDefault.png'; this.className='profile_img'">
+                      <img th:src="@{/wineshare-img/people.png}" alt="image"
+                           th:class="profile_img">
                       <div class="post-rating">
                         <i class="fa fa-star" aria-hidden="true"></i>
                         <i class="fa fa-star" aria-hidden="true"></i>
